--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bright">#0096FF</color>
+    <color name="blue">#89CFF0</color>
+    <color name="dark_blue">#0777DA</color>
+    <color name="gray">#6F6F70</color>
+    <color name="cyan">#7EDEF6</color>
 </resources>
