--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="blue">#89CFF0</color>
     <color name="dark_blue">#0777DA</color>
     <color name="gray">#6F6F70</color>
-    <color name="cyan">#7EDEF6</color>
+    <color name="cyan">#D7F7FF</color>
 </resources>
