--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,32 +25,41 @@
         android:layout_height="180dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <LinearLayout
+        android:id="@+id/indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/carousell" />
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/carousel"/>
 
     <ImageButton
         android:id="@+id/button1"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:contentDescription="@string/button1"
+        android:layout_width="160dp"
+        android:layout_height="170dp"
+        android:layout_marginTop="28dp"
         android:padding="16dp"
-        android:src="@drawable/logo_mentalk"
-        app:layout_constraintTop_toBottomOf="@id/carousel"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/img_4"
         app:layout_constraintEnd_toStartOf="@id/button2"
-        app:layout_constraintHorizontal_chainStyle="spread" />
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/carousel" />
 
     <ImageButton
         android:id="@+id/button2"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:contentDescription="@string/button2"
+        android:layout_width="160dp"
+        android:layout_height="170dp"
+        android:layout_marginTop="28dp"
         android:padding="16dp"
-        android:src="@drawable/carousell"
-        app:layout_constraintTop_toBottomOf="@id/carousel"
-        app:layout_constraintStart_toEndOf="@id/button1"
+        android:src="@drawable/img_5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_chainStyle="spread" />
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toEndOf="@id/button1"
+        app:layout_constraintTop_toBottomOf="@id/carousel" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
