--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="bright">#0096FF</color>
     <color name="blue">#89CFF0</color>
     <color name="dark_blue">#0777DA</color>
+    <color name="white_bone">#E4E4E4</color>
     <color name="gray">#6F6F70</color>
     <color name="cyan">#7EDEF6</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
