--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -33,6 +33,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <TextView
+                android:id="@+id/published"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="Tanggal Publis"
+                android:textSize="18sp"
+                android:textColor="@color/gray"
+                android:gravity="center"
+                android:background="@color/transparent"
+                android:layout_gravity="top" />
+
             <ImageView
                 android:id="@+id/detail_image"
                 android:layout_width="match_parent"
@@ -52,14 +64,14 @@
             android:text="@string/tittle"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/detail_desc"
+            app:layout_constraintBottom_toTopOf="@id/detail_url"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cardView" />
 
 
         <TextView
-            android:id="@+id/detail_desc"
+            android:id="@+id/detail_url"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:text="@string/news_description"
