--- a/app/src/main/res/layout/news_card.xml
+++ b/app/src/main/res/layout/news_card.xml
@@ -48,7 +48,7 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/username"
+                android:id="@+id/tittle"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
@@ -62,8 +62,8 @@
                 app:layout_constraintTop_toTopOf="@+id/cardView" />
 
             <TextView
-                android:id="@+id/newsDescription"
-                android:layout_width="0dp"
+                android:id="@+id/detail_url"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
@@ -73,7 +73,7 @@
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cardView"
-                app:layout_constraintTop_toBottomOf="@+id/username" />
+                app:layout_constraintTop_toBottomOf="@+id/tittle" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
