--- a/app/src/main/res/layout/activity_latihan4.xml
+++ b/app/src/main/res/layout/activity_latihan4.xml
@@ -55,6 +55,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:listitem="@layout/items_question" />
 
+            <Button
+                android:id="@+id/buttons"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Submit"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rvNews"/>
+
             <ProgressBar
                 android:id="@+id/progreslatihan"
                 android:layout_width="wrap_content"
