--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,24 +37,26 @@
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/carousel"/>
 
-    <ImageButton
+    <ImageView
         android:id="@+id/button1"
         android:layout_width="160dp"
         android:layout_height="170dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="8dp"
         android:padding="16dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/img_4"
         app:layout_constraintEnd_toStartOf="@id/button2"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/carousel" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/button2"
         android:layout_width="160dp"
         android:layout_height="170dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="8dp"
         android:padding="16dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/img_5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread"
