--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -51,12 +51,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:ellipsize="end"
-                android:gravity="start"
-                android:maxLines="3"
-                android:text="Judul News"
+                android:text="Username Storyteller"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,12 +62,14 @@
 
             <TextView
                 android:id="@+id/storyDesc"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:gravity="start"
-                android:textSize="14sp"
+                android:layout_marginEnd="16dp"
+                android:maxLines="3"
                 android:text="Description Miniview"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cardView"
                 app:layout_constraintTop_toBottomOf="@+id/username" />
