--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -33,18 +33,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/published"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="Tanggal Publis"
-                android:textSize="18sp"
-                android:textColor="@color/gray"
-                android:gravity="center"
-                android:background="@color/transparent"
-                android:layout_gravity="top" />
-
             <ImageView
                 android:id="@+id/detail_image"
                 android:layout_width="match_parent"
@@ -52,7 +40,7 @@
                 android:contentDescription="@string/news_image"
                 android:scaleType="centerInside"
                 app:layout_constraintDimensionRatio="H,16:9"
-                app:srcCompat="@drawable/ic_place_holder" />
+                app:srcCompat="@drawable/b" />
         </androidx.cardview.widget.CardView>
 
         <TextView
@@ -74,12 +62,27 @@
             android:id="@+id/detail_url"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="@string/news_description"
+            android:text="@string/berita1"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tittle" />
+
+        <TextView
+            android:id="@+id/published"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_margin="8dp"
+            android:background="@color/transparent"
+            android:gravity="center"
+            android:text="Tanggal Publis"
+            android:textColor="@color/gray"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/cardView"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="26dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
