--- a/app/src/main/res/layout/activity_latihan1.xml
+++ b/app/src/main/res/layout/activity_latihan1.xml
@@ -72,6 +72,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edInput"
+            android:hint="@string/hintmentest1"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:gravity="top"
