--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="16dp"
     app:cardCornerRadius="18dp"
+    android:background="@color/bright"
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
