--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -79,6 +79,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="96dp"
         android:text="Mulai"
+        android:textColor="@color/black"
         android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
