--- a/app/src/main/res/layout/activity_latihan1.xml
+++ b/app/src/main/res/layout/activity_latihan1.xml
@@ -8,12 +8,22 @@
     tools:context=".view.latihan.Latihan1Activity"
     android:background="@color/cyan">
 
+    <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="437dp"
+        android:background="@drawable/img_14"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue"
-        app:titleTextColor="@color/gray"
+        android:background="#02ADE3"
+        app:titleTextColor="@color/white"
+        app:title="WDYT"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +36,7 @@
         android:text="@string/describe"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,8 +50,9 @@
         android:layout_margin="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/blue"
-        android:drawableEnd="@drawable/search"
+        android:drawableEnd="@drawable/magnifier"
         android:text="@string/classify"
+        android:textSize="18sp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +76,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +86,7 @@
             android:hint="@string/hintmentest1"
             android:layout_width="match_parent"
             android:layout_height="250dp"
+            android:background="@color/white"
             android:gravity="top"
             android:lines="10" />
     </com.google.android.material.textfield.TextInputLayout>
