--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue"
+        android:background="#02ADE3"
         app:titleTextColor="@color/gray"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/overview_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Test Overview"
+        android:text="@string/test_overview"
         android:textAlignment="center"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -57,9 +57,10 @@
         android:id="@+id/desc2"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/img_2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/desc1" />
 
@@ -67,9 +68,10 @@
         android:id="@+id/desc3"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/img_3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/desc2" />
 
@@ -77,13 +79,13 @@
         android:id="@+id/start"
         android:layout_width="104dp"
         android:layout_height="53dp"
-        android:layout_marginTop="96dp"
-        android:text="Mulai"
-        android:textColor="@color/black"
+        android:layout_marginTop="104dp"
         android:backgroundTint="@color/blue"
+        android:text="@string/mulai"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/desc2" />
-    
+
 </androidx.constraintlayout.widget.ConstraintLayout>
