--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -80,9 +80,9 @@
         android:layout_width="104dp"
         android:layout_height="53dp"
         android:layout_marginTop="104dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/dark_blue"
         android:text="@string/mulai"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
