--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -22,7 +22,8 @@
             android:layout_height="?attr/actionBarSize"
             app:menu="@menu/menu"
             app:title="@string/app_name"
-            android:background="@color/blue"/>
+            app:titleTextColor="@color/white"
+            android:background="#02ADE3"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -32,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
+        android:backgroundTint="@color/white"
         android:hint="@string/search_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
