--- a/app/src/main/res/layout/news_card.xml
+++ b/app/src/main/res/layout/news_card.xml
@@ -43,7 +43,7 @@
                     android:layout_height="match_parent"
                     android:contentDescription="Story Image"
                     android:scaleType="fitXY"
-                    android:src="@drawable/b" />
+                    android:src="@drawable/img_16" />
 
             </androidx.cardview.widget.CardView>
 
