--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/others"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/settings">
+        android:icon="@drawable/img_15">
         <menu>
             <item android:id="@+id/sign_out_menu"
                 android:title="@string/logout" />
